# newsroomAgent

./: README.md  pyproject.toml
data/raw/: 2021-kerala-legislative-assembly-election.txt  2026-27-uefa-europa-league.txt  2026-assam-legislative-assembly-election.txt  2026-bulgarian-parliamentary-election.txt  2026-fifa-world-cup-qualification.txt  2026-fifa-world-cup-squads.txt  2026-formula-one-world-championship.txt  2026-peruvian-general-election.txt  2026-puducherry-legislative-assembly-election.txt  2026-senedd-election.txt  2026-tamil-nadu-legislative-assembly-election.txt  2026-united-kingdom-local-elections.txt  2026-virginia-redistricting-referendum.txt  2026-white-house-correspondents-dinner-shooting.txt  420-cannabis-culture.txt  86-term.txt  aaron-rai.txt  abhijeet-dipke.txt  adam-back.txt  afrika-bambaataa.txt  agnimitra-paul.txt  alex-smalley.txt  alexx-ekubo.txt  andy-burnham.txt  anna-s-archive.txt  antoine-semenyo.txt  apex-2026-film.txt  arslanbek-makhmudov.txt  artemis-iii.txt  artemis-program.txt  artsfest.txt  attempted-assassination-of-donald-trump-in-pennsylvania.txt  avignon-papacy.txt  ayo-dosunmu.txt  backrooms-film.txt  ben-mccollum.txt  ben-sasse.txt  bethlehem-pennsylvania.txt  betty-broderick.txt  bhabanipur-west-bengal-assembly-constituency.txt  (+438 more)
docs/: architecture_graph.mmd
experiments/: bedrock_smoke.py
newsroomagent/: api.py  graph.py  mcp_server.py  models.py  providers.py
newsroomagent/frontend/: index.html
scripts/: draw_graph.py
