[project]
name = "newsroomagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "mcp>=1.27.1",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.46.0",
]
